# risk-manager-v34

./: .docs-structure  .env.example  .env.template  .gitattributes  .gitignore  ACCOUNT_ID_LOOKUP_EXPLANATION.md  ADAPTER_IMPLEMENTATION.md  AGENT1_CONFIG_CREDENTIALS_DELIVERY.md  AGENT2_INTEGRATION_GUIDE.md  AGENT3_CONFIG_INTEGRATION_REPORT.md  AGENT4_FINAL_SUMMARY.txt  AGENT_2_SUMMARY.md  AGENT_GUIDELINES.md  AGENT_SWARM_COMPLETION_2025-10-30.md  AGENT_SWARM_SUMMARY.md  AI_HANDOFF_2025-10-29_PNL_AND_PROTECTIVE_ORDERS.md  AI_HANDOFF_2025-10-29_RULE_LOADING.md  AI_HANDOFF_PROTECTIVE_ORDERS_FIX.md  AI_HANDOFF_TEST_FIXES.md  AI_HANDOFF_TIMERS_CONFIG.md  AI_HANDOFF_UNREALIZED_PNL_COMPLETE.md  AI_HANDOFF_UNREALIZED_PNL_RULES.md  AI_SESSION_HANDOFF_2025-10-28.md  AI_SESSION_HANDOFF_2025-10-28_BUGFIX.md  AI_SESSION_HANDOFF_2025-10-29.md  ALL_RULES_RESPECT_TIMERS_SCHEDULES.md  ARCHITECTURE_EXPLAINED.md  AUDIT_SUMMARY.md  BUG_FIX_VALIDATION_2025-10-30.md  CACHE_AND_SEMANTIC_FIX.md  CLAUDE.md  COMPLETE_SYSTEM_ARCHITECTURE.md  COMPLETION_INDEX.md  COMPOSITE_ENFORCEMENT_INTEGRATION.md  COMPOSITE_ENFORCEMENT_RUN_DEV_DEMO.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  CONFLICTS-FOR-USER-REVIEW.md  CRITICAL_BUG_FIXES_2025-10-30.md  CUsersjakersDesktoprisk-manager-v34testsunittest_state__init__.py  DATABASE_ACCESS.md  (+106 more)
.claude/: settings.local.json
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/agents/: deployment-manager.md  integration-validator.md  quality-enforcer.md  risk-rule-developer.md  test-coordinator.md
.claude/prompts/: runtime-guidelines.md
config/: .env.example  CREATION_SUMMARY.txt  EVENTS_CONFIG_README.md  QUOTE_INTEGRATION_FLOW.txt  accounts.yaml  events_config.yaml  events_config.yaml.template  risk_config.yaml  timers_config.yaml
docs/: .agent_templates.txt  .analysis_report.txt  DEPENDENCY_GRAPH.txt  IMPLEMENTATION_MASTER_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  STATUS.md  quickstart.md  summary_2025-10-23.md
docs/PROJECT_DOCS/: CURRENT_VERSION.md  INTEGRATION_NOTE.md  REFERENCE_GUIDE.md
docs/admin/: ADMIN_CLI_IMPLEMENTATION.md  ADMIN_CLI_MVP_COMPLETE.md  (+8 more)
examples/: 01_basic_usage.py  02_advanced_rules.py  03_multi_instrument.py  04_sdk_integration.py  README.md  logging_display_example.py  runtime_invariant_guards.py
scripts/: README.md  generate_structure.py
test_reports/: .gitkeep  2025-10-23_21-01-28_failed.txt  2025-10-23_21-03-35_failed.txt  2025-10-23_21-04-02_failed.txt  2025-10-23_21-05-48_failed.txt  2025-10-23_21-08-34_failed.txt  2025-10-24_18-06-55_failed.txt  2025-10-24_18-11-56_failed.txt  2025-10-24_18-12-39_failed.txt  2025-10-24_18-13-17_failed.txt  2025-10-24_18-13-37_failed.txt  2025-10-24_18-13-59_failed.txt  2025-10-24_18-16-44_failed.txt  2025-10-24_19-38-34_failed.txt  2025-10-24_19-38-52_failed.txt  2025-10-24_19-41-22_failed.txt  2025-10-24_19-41-36_failed.txt  2025-10-24_19-42-04_failed.txt  2025-10-24_19-42-39_failed.txt  2025-10-24_19-45-03_failed.txt  2025-10-24_19-46-43_failed.txt  2025-10-24_19-57-47_failed.txt  2025-10-24_19-58-38_failed.txt  2025-10-24_20-00-33_failed.txt  2025-10-24_23-40-34_failed.txt  2025-10-25_11-50-24_failed.txt  2025-10-27_17-06-25_failed.txt  2025-10-27_17-16-43_failed.txt  2025-10-27_17-18-12_failed.txt  2025-10-27_17-29-37_failed.txt  2025-10-27_20-12-54_failed.txt  2025-10-27_20-48-28_failed.txt  2025-10-27_21-01-36_failed.txt  2025-10-27_21-12-12_failed.txt  2025-10-27_21-24-01_failed.txt  2025-10-27_21-39-24_failed.txt  2025-10-27_22-21-47_failed.txt  2025-10-27_22-37-53_failed.txt  2025-10-27_22-51-54_failed.txt  2025-10-27_23-07-02_failed.txt  (+43 more)
tests/: conftest.py  validate_refactoring.py
(+412 files in other folders)
